# excel-template-viz

./: .gitignore  Google OAuth Config.md  QUICKSTART.md  README.md  gradio_app.py  install.bat  pyproject.toml  requirements.txt  run.bat  run_gradio.bat
.agents/: AGENTS.md
.nicegui/: storage-user-e6c6be39-f768-4feb-ac0a-bfd70867b551.json
app/: __init__.py  app.py  core_connect.py  core_registry.py  core_store.py  core_toml.py  core_transform.py  download_gemma4_model.py  gemma4_field_matcher.py  gradio_main.py  main.py
config/: templates.json
docs/: CODEGRAPH_OVERVIEW.md  RELEASE.md  connect_google.md  data_flow_design.md  db_store.md  embed_gemma4.md  embed_paddle_ocr.md  excel_transform.md  gemma4_e4b_workflow.md  sample_template.toml  sample_template.xlsx  toml_config_design.md  yaml_config_guide.md
llm_gemma4/: __init__.py  __main__.py  config.py  hf_download.py  models_catalog.py
nicegui_ui/: app.py  ssl_manager.py  wizard_panel.py
paddle_ocr/: __init__.py  config.py  main.py  models_catalog.py  requirements.txt
plans/: CODEGRAPH_OVERVIEW.md  codegraph.csv  codegraph.html
scripts/: codegraph_watch.ps1  debug_vision_paste.py  download_gemma4_model.py  download_phi4_model.py
templates/: Frozen lot.config.json  Ginger_Lots.config.json  Ginger_Lots.paste.yaml  README.txt  gin_lot_template.xlsx
tests/: test_batch_llm_matching.py  test_data_source.py  test_excel_parser.py  test_export_naming.py  test_google_sheets.py  test_imports.py  test_paste_parse.py  test_phi35_vision_model.py  test_phi35_vision_paste_infer.py  test_phi35_vision_paste_merge.py  (+5 more)
(+206 files in other folders)
